feat: implement pagination on getFilesFromS3